feat: 好友房相关改动